# raise-events-api

./: Dockerfile  README.md  docker-compose.yml  setup.cfg
.github/workflows/: tests.yml
deploy/: README.md
deploy/buildspec/: build.yml  deploy-prod.yml  deploy-staging.yml
deploy/chart/: Chart.yaml  values.yaml
deploy/chart/templates/: api-config.yaml  api-deployment.yaml  api-ingressroute.yaml  api-secret.yaml  api-service.yaml  middleware-http-redirect.yaml
deploy/k8s/: raise-events-api-sa-prod.yaml  raise-events-api-sa-staging.yaml  redpanda-po-prod.yaml  redpanda-po-staging.yaml
eventsapi/: auth.py  kafka_producer.py  main.py  models.py  routers.py  settings.py  utils.py
eventsapi/models/: api.py  avro.py  kafka.py
tests/: conftest.py  test_auth.py  test_avro_schemas.py  test_content_load_failed.py  test_content_loaded.py  test_events.py  test_ib_input_submitted.py  test_ib_pset_problem_attempted.py  test_kafka.py
