[metadata]
name = raise-eventsapi
version = 0.0.1

[options]
packages = eventsapi
install_requires =
    fastapi==0.109.0
    uvicorn[standard]==0.27.0
    python-jose[cryptography]==3.3.0
    aiokafka==0.10.0
    py-avro-schema==3.4.1
    aws-glue-schema-registry==1.1.3

[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-cov
