[metadata]
name = raise-eventsapi
version = 0.0.1

[options]
packages = eventsapi
install_requires =
    fastapi==0.111.0
    uvicorn[standard]==0.29.0
    python-jose[cryptography]==3.3.0
    aiokafka==0.10.0
    py-avro-schema==3.6.0
    aws-glue-schema-registry==1.1.3

[options.extras_require]
test =
    flake8
    pytest
    httpx
    pytest-cov
